# hookline_local

./: .gitignore  CMakeLists.txt  Hookline.sln  Hookline.vcxproj  Hookline.vcxproj.filters  README.md  vcpkg.json
assets/sounds/: guitar_loop_music.opus  item_pick_up.opus  licenses.txt  retro_hurt.opus
src/: Game.cpp  Game.hpp  constants.hpp  main.cpp
src/core/: Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.hpp  CameraComponent.hpp  Game.cpp  Game.hpp  InputComponent.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderSystem.cpp  RenderSystem.hpp  Scene.hpp  TransformComponent.hpp
src/gameplay/: CameraSystem.cpp  CollectableComponent.hpp  CollectableSystem.cpp  CollectableSystem.hpp  HealthComponent.hpp  ProjectileComponent.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp
src/physics/: CollisionSystem.cpp  CollisionSystem.hpp  Components.hpp  GrapplingHook.cpp  GrapplingHook.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  util.cpp  util.hpp
src/render/: CameraSystem.cpp  CameraSystem.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderSystem.cpp  RenderSystem.hpp  Vertex.hpp
src/shader/: BasicMeshShader.cpp  BasicMeshShader.hpp  CyberpunkBackgroundShader.cpp  CyberpunkBackgroundShader.hpp  CyberpunkBackgroundShaderNew.cpp  CyberpunkBackgroundShaderNew.hpp  GrappleBoxShader.cpp  GrappleBoxShader.hpp  PlayerTestShaderProgram.cpp  PlayerTestShaderProgram.hpp
src/sound/: Sound.cpp  Sound.hpp  load_opus.cpp  load_opus.hpp  load_wav.cpp  load_wav.hpp
src/util/: gl_compile_program.cpp  gl_compile_program.hpp  load_save_png.cpp  load_save_png.hpp  misc.cpp  misc.hpp
